upload frontend alignment fix

--- a/styles/upload.css
+++ b/styles/upload.css
@@ -1,6 +1,7 @@
 .content {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 2rem;
     padding: 7rem 20rem 1rem 20rem;
     box-sizing: border-box;
@@ -8,8 +9,8 @@
 
 .form {
     display: flex;
-    gap: 1rem;
-    background-color: #15191d;
+    gap: 2rem;
+    background-color: #0E1626;
     padding: 3rem;
     border-radius: 20px;
 }
